<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:onClick="onClick_CheckList"
            android:title="@string/CheckList" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:onClick="onClick_Equipamento"
            android:title="@string/Equipamento" />
    </group>

    <item android:title="@string/Configuracoes">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:onClick="onClick_Parametro"
                android:title="@string/Parametros" />
        </menu>
    </item>

</menu>
