<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CTL_Principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mtmsistemas.gestorm.Activity.ACT_Login">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/TV_Usuario"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/TV_Senha"
        app:layout_constraintTop_toBottomOf="@+id/ET_Usuario"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/ET_Usuario"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/ET_Senha"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp" />

    <Button
        android:id="@+id/BT_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="-5dp"
        android:onClick="onClick_Login"
        android:text="@string/BTN_Login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET_Senha" />

    <Button
        android:id="@+id/BTN_Sair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick_Sair"
        android:text="@string/BTN_Sair"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET_Senha" />

</android.support.constraint.ConstraintLayout>
