<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_Fgm_Webservice"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mtmsistemas.gestorm.View.Fragment.FGM_Webservice">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/IMV_WStopo"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:contentDescription="TODO"
                android:scaleType="centerCrop"
                android:src="@drawable/backgroud_webservice" />

            <TextView
                android:id="@+id/TV_WSendereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/endere_o_webservice" />

            <EditText
                android:id="@+id/ET_WSendereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/BTN_Cancelar"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/BTN_Cancelar" />

                <Button
                    android:id="@+id/BTN_Conectar"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/BTN_TestarConexao" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/FGM_ContentLista"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>
